<resources>
    <string name="app_label">Mountain Uni</string>
    <string name="app_name">Mountain Unicyclist</string>


    <string name="title_section1">Trails</string>
    <string name="title_section2">Rides</string>
    <string name="title_section3">People</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Trail</string>
    <string name="title_activity_location_picker">Location Picker</string>
    <string name="featured_image">Featured Image</string>
    <string name="background_image">background image</string>
    <string name="location_name">Location Name</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="trail_head">Trail Head</string>
    <string name="trails">Trails</string>

    <string name="features">Features</string>
    <string name="rides">Rides</string>
    <string name="difficulty">Difficulty</string>
    <string name="rating">Rating</string>
    <string name="trail_name">Trail Name</string>
    <string name="trailsystem">Trailsystem</string>
    <string name="title_activity_trail">Trails</string>
    <string name="photos">Photos</string>
    <string name="comments">Comments</string>
    <string name="edit">Edit</string>
    <string name="ride_now">Ride Now!</string>
    <string name="add_comment">Add Comment</string>
    <string name="trail">Trail</string>
    <string name="people">People</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="edit_trail">Edit Trail</string>
    <string name="delete_trail">Delete Trail</string>
    <string name="confirm_delete_trail">Do you really want to remove this trail and all it\'s related photos, features and rides?</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="confirm_delete_photo">Are you sure you want to delete this image?</string>
    <string name="delete">Delete</string>
    <string name="identify_trailhead">Identify the TrailHead</string>
    <string name="location_picker_instructions">Medium Text</string>
    <string name="offroad">Is this an "offroad" trail?</string>
    <string name="muni">MUni trail</string>
    <string name="directions">Directions</string>
    <string name="description_of_trail">Description of trail</string>
    <string name="directions_text">How to get there...</string>
    <string name="comment">Add Comment</string>
    <string name="no_trailsystem">no trailsystem</string>
    <string name="new_trailsystem">New Trailsystem</string>
    <string name="title_activity_trailsystem">Trailsystem</string>

    <string name="hello_world">Hello world!</string>
    <string name="directions_parking">Directions to parking lot</string>
    <string name="save">Save</string>
    <string name="trailsystem_name">Trailsystem Name</string>
</resources>
