<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="12dp"
    android:background="@color/card_background"
    android:id="@+id/all"
    android:fillViewport="true">

    <!-- A CardView that contains a TextView -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout"
        android:elevation="1dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:id="@+id/feature_photo"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginLeft="-25dp"
            android:layout_marginRight="-25dp" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_titlebar"
            android:id="@+id/titlebar">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/difficulty_icon"
                android:padding="8dp"
                android:src="@drawable/ic_easy"
                android:layout_gravity="center_vertical|left"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/menu_button"
                android:layout_gravity="right|center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
                android:visibility="visible" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:id="@+id/titletext"
                android:gravity="left"
                android:layout_marginLeft="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Title"
                    android:id="@+id/title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="approx. 30 km away"
                    android:id="@+id/distance"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/card"
            android:layout_below="@+id/feature_photo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="no trailsystem"
                    android:id="@+id/trailsystem"
                    android:layout_gravity="right|center_vertical"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/rating"
                    android:id="@+id/textView4"
                    android:layout_gravity="left|top"
                    android:textColor="@color/secondary_text"
                    android:paddingLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="★★★★☆☆☆☆"
                    android:id="@+id/rating"
                    android:layout_gravity="left|center_vertical"
                    android:paddingTop="10dp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Description of trail"
                android:id="@+id/description"
                android:minLines="1"
                android:maxLines="5"
                android:textColor="@color/primary_text"
                android:padding="10dp" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:id="@+id/stats">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Rides: 14/102"
                    android:id="@+id/rides"
                    android:layout_gravity="left|top"
                    android:textColor="@color/secondary_text"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/photos"
                android:id="@+id/textView5"
                android:paddingLeft="10dp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:id="@+id/photo_picker"
                android:background="@color/background">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/photos"
                    android:minHeight="96dp"></LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/comments_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/comments"
                    android:id="@+id/textView6"
                    android:paddingLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/comments_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Comment"
                    android:id="@+id/add_comment_button"
                    android:textColor="@color/accent"
                    android:layout_gravity="right"
                    android:padding="12dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:gravity="right"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:background="@color/card_background"
            android:elevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rides"
                android:id="@+id/rides_button"
                android:textColor="@color/primary_dark"
                android:clickable="true"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/features"
                android:id="@+id/features_button"
                android:textColor="@color/primary_dark"
                android:clickable="true"
                android:padding="12dp" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>