<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brentandjody.mountainunicyclist.TrailEditActivity"
    android:id="@+id/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:inputType="textCapWords"
                android:editable="true"
                android:background="@color/background_material_light"
                android:padding="8dp"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="2dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:hint="@string/trail_name"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/location_picker_button"
                android:layout_alignBottom="@+id/location_picker_button"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trailsystem"
                android:layout_gravity="center"
                android:prompt="@id/trailsystem"
                android:layout_toLeftOf="@+id/location_picker_button"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_alignTop="@+id/location_picker_button"
                android:layout_toRightOf="@+id/title" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_picker_button"
                android:layout_gravity="right|center_vertical"
                android:src="@android:drawable/ic_dialog_map"
                android:background="@color/primary_dark"
                android:padding="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:id="@+id/photo_picker"
                android:measureAllChildren="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/title">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/photos"
                    android:minHeight="96dp"
                    android:gravity="center_vertical|left">

                    <ImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:id="@+id/add_photo_button"
                        android:src="@mipmap/ic_add_photo"
                        android:scaleType="centerCrop"
                        android:paddingLeft="15dp" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/description"
                android:id="@+id/textView8"
                android:textColor="@color/secondary_text"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:layout_below="@+id/photo_picker" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:inputType="textMultiLine|textCapSentences"
                android:editable="true"
                android:lines="4"
                android:longClickable="true"
                android:gravity="top"
                android:background="@color/background_floating_material_light"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/difficulty"
                android:id="@+id/textView"
                android:textColor="@color/secondary_text"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:autoText="true"
                android:background="@color/translucent"
                android:layout_below="@+id/isMuni" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/difficulty"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:gravity="center_horizontal"
                android:paddingBottom="12dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@color/translucent"
                android:layout_below="@+id/textView">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/easy" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_easy"
                    android:labelFor="@+id/easy"
                    android:layout_weight="1"
                    android:layout_marginLeft="-10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/medium"
                    android:checked="false" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_medium"
                    android:labelFor="@+id/medium"
                    android:layout_weight="1"
                    android:layout_marginLeft="-10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/difficult" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/ic_difficult"
                    android:labelFor="@+id/difficult"
                    android:layout_weight="1"
                    android:layout_marginLeft="-10dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/expert" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:src="@drawable/ic_expert"
                    android:labelFor="@+id/expert"
                    android:layout_weight="1"
                    android:layout_marginLeft="-10dp" />

            </RadioGroup>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offroad"
                android:id="@+id/isMuni"
                android:layout_below="@+id/description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Rating"
                android:id="@+id/textView2"
                android:textColor="@color/secondary_text"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:background="@color/translucent"
                android:layout_below="@+id/difficulty" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:numStars="8"
                android:rating="4"
                android:isIndicator="false"
                android:stepSize="1"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                android:background="@color/translucent"
                android:paddingLeft="20dp"
                android:layout_below="@+id/textView2"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Directions"
                android:id="@+id/textView14"
                android:textColor="@color/secondary_text"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:layout_below="@+id/rating" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/directions"
                android:layout_below="@+id/textView14"
                android:layout_centerHorizontal="true"
                android:inputType="textMultiLine|textCapSentences"
                android:editable="true"
                android:lines="4"
                android:longClickable="true"
                android:gravity="top"
                android:background="@color/background_floating_material_light"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_marginTop="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/ok_button"
            android:elevation="6dp"
            android:focusable="true" />

    </FrameLayout>

</RelativeLayout>
